# periodictable

./: .gitignore  .travis.yml  ChangeLog.rst  LICENSE.txt  MANIFEST.in  README.rst  README.txt  conftest.py  epydoc.cfg  fix_setuptools_chmod.py  pyproject.toml  pytest.ini  release.sh  rtd-requirements  setup.cfg  setup.py  test.py
.github/workflows/: test.yml
doc/: README.txt  nsfreferences.html
doc/sphinx/: Makefile  README.txt  conf.py  genmods.py  index.rst  make.bat  rst_prolog
doc/sphinx/_extensions/: dollarmath.py  inheritance_diagram.py
doc/sphinx/_static/: mathconf.js  site.css
elements/: __init__.py  chemicals.py  constants.py  core.py  covalent_radius.py  crystal_structure.py  density.py  elements.py  mass.py  molecules.py  nsf.py  run_tests  xsf.py
elements/xsf/: zr.nff
periodictable/: __init__.py  activation.py  chemicals.py  constants.py  core.py  covalent_radius.py  cromermann.py  crystal_structure.py  density.py  fasta.py  formulas.py  ionic_radius.py  magnetic_ff.py  mass.py  mass_2001.py  nsf.py  nsf_tables.py  plot.py  util.py  xsf.py
periodictable/xsf/: cr.nff  mg.nff  nb.nff  pt.nff  read.me  ta.nff  y.nff
periodtable/: chemicals.py
test/: core.py  covalent_radius.py  crystal_structure.py  density.py  formulas.py  ionic_radius.py  mass.py  molecules.py  nsf.py  nsfd2o.py  private.py  run_tests  run_tests.py  test_activation.py  test_core.py  test_covalent_radius.py  test_crystal_structure.py  test_density.py  test_formulas.py  test_magnetic_ff.py  test_mass.py  test_nsf.py  test_nsfd2o.py  test_private.py  test_run_tests.py  test_xsf.py  xsf.py
(+48 files in other folders)
